tests/paczka1/fuzzy1/17577003.err
Error in line 11: igRC7z5ZTUR S811 34,8
Error in line 20: uNJ6h S811 7,5
Error in line 19: S32 S858 48,2
Error in line 25: S32 S32 86,9
Error in line 29: igRC7z5ZTUR SA11 47A,7
Error in line 24: uNJ6h S858 55,0
